fix overflow menu on iphone pro 12

--- a/src/components/menu-style.scss
+++ b/src/components/menu-style.scss
@@ -58,20 +58,20 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 440px) {
   .menu-ctn {
     top: 1rem;
   }
 }
 
-@media (max-height: 680px) and (max-width: 380px) {
+@media (max-height: 680px) and (max-width: 395px) {
   .menu-ctn {
     top: 0.5rem;
 
     .logo {
       width: 50px;
       height: 50px;
-      
+
       img {
         width: 50px;
         height: 50px;
